docs: alterar manual de instalacao
Updated installation manual to include new steps for JDK, MySQL, and JavaFX configuration.